fix text-align right on numbers

--- a/src/app/css/assign.component.css
+++ b/src/app/css/assign.component.css
@@ -676,3 +676,7 @@ h3{
   background: transparent;
   border:0;
 }
+
+.align--right{
+  text-align: right;
+}
